NodeJs/webpagina/style/style.css
@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap");
:root {
  --text-color: #fdf9ee;

  --page-background-color: white;

  --border-color: var(--neutral-300);
  --border-radius: 8px;
  --border-radius-l: 16px;

  --font-weight-normal: 300;
  --font-weight-bold: 400;

  --font-size-base: 1rem;
  --font-size-l: 1.5rem;
  --font-size-xl: 2.25rem;
  --font-size-xxl: 3.375rem;

  --space-xxs: 0.25rem;
  --space-xs: 0.5rem;
  --space-s: 1rem;
  --space-m: 1.5rem;
  --space-l: 2rem;
  --space-xl: 3rem;
  --space-xxl: 4.5rem;
}

/*
  Global styles
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 100%;
}

html {
  font-family: "Patrick Hand SC", serif;
  font-weight: 400;
  font-style: normal;
  color: var(--text-color);
  background-color: var(--page-background-color);
  /* background: radial-gradient(105.02% 39.32% at 50.13% 45.07%, #c16863 0%, #904849 100%); */
  background: radial-gradient(105.02% 39.32% at 50.13% 45.07%, #C16863 0%, #904849 100%);
}

/* Responsive images */

img,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

input {
  border: none;
  outline: none;
  font: inherit;
  color: var(--text-color);
  background: none;
  padding: 0;
  margin: 0;
  box-shadow: none;
  appearance: none;
}

/* Headings */

h1,
h2,
h3,
h4 {
  font-weight: var(--font-weight-normal);
}

h2 {
  font-size: var(--font-size-xl);
  line-height: 3rem;
}

h3 {
  font-size: 1rem;
}


/* lists */

.list-reset {
  list-style: none;
  padding: 0;
  margin: 0;
}

/* button */

button {
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  color: inherit;
  cursor: pointer;
  outline: inherit;
}

/*
  Specific styles
*/

/* Site header */

.c-header {
  margin-top: 3rem;
  margin-right: 20px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.c-main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  overflow: hidden;
  margin-top: 5rem;
}

.c-namecontainer {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2.25rem;
}
/* moet dynamisch veranderen in js */
.c-namecontainer__input {
  width: 10rem;
}

.c-gamemode {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.c-gamemode__container {
  display: flex;
  justify-content: space-between;
  width: max-content;
  transform: translateX(25%);
  transition: all 0.2s;
  transition-timing-function: ease-in;
}

.c-gamemode:has(input[type="radio"][value="Singleplayer"]:checked) .c-gamemode__container{
  transform: translateX(-25%);
}

.c-gamemode__item{
  opacity: 1;
  transition: all 0.4s;
}
.c-gamemode__item p{
  color: black;
  text-align: center;
  color: var(--text-30, #FDF9EE);
  text-align: center;
  font-family: "Patrick Hand SC";
  font-size: 24px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  text-transform: lowercase;
  padding-bottom: 2rem;
}
.c-gamemode:has(input[type="radio"][value="Singleplayer"]:checked) .c-gamemode__item__multiplayer{
  opacity: 0.5;
  transform: scale(0.8);
}
.c-gamemode:has(input[type="radio"][value="Multiplayer"]:checked) .c-gamemode__item__singleplayer{
  opacity: 0.5;
  transform: scale(0.8);
}

.c-gamemode__select input{
  padding: 0;
  margin: 0;
  width: 0%;
}

.c-gamemode__select label[for="Multiplayer"]::before, .c-gamemode__select label[for="Singleplayer"]::before {
  content: "";
  display: inline-block;
  margin: 0;
  padding: 0;
  width: 0.5rem;
  height: 0.5rem;
  border: 1px solid var(--text-color);
  border-radius: 100%;
}
.c-gamemode:has(input[type="radio"][value="Singleplayer"]:checked) .c-gamemode__select label[for="Singleplayer"]::before{
  background-color: var(--text-color);
}
.c-gamemode:has(input[type="radio"][value="Multiplayer"]:checked) .c-gamemode__select label[for="Multiplayer"]::before{
  background-color: var(--text-color);
}


.c-gamemode__title {
  text-align: center;
  font-size: 1.5rem;
  text-transform: uppercase;
}



/* Buttons onderaan */
.c-buttons {
  display: flex;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  margin-bottom: 6rem;
}

.c-button__icon {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border: 1px solid var(--text-color);
  border-radius: 1.5rem;
  padding: 0.5rem;
  border-radius: 24px;
  background: rgba(255, 255, 255, 0.05);
  box-shadow: 0px 0px 4px 1px rgba(238, 253, 247, 0.2) inset;
}

.c-button__icon--help{
  position: absolute;
  top: 1rem;
  right: 1rem;
}

.c-button__start {
  display: flex;
  padding: 16px 24px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border-radius: 24px;
  background: var(--accent-10, #261516);
  box-shadow: 0px 0px 4px 1px rgba(238, 253, 247, 0.2) inset;
  font-size: 24px;
  text-transform: uppercase;
}

